# Cahn-Hilliard

./: .gitignore  README.md  requirements.txt
C/: CMakeLists.txt
C/inc/: shaders.h
C/inc/cpu/: solver.h
C/inc/gpu/: helper.h
C/scripts/: convergence.py  kinematics.py
C/src/: main.c  shaders.c  window.c
C/src/gpu/: helper.c
Exercices/: ExCM2.py  ExCM3_gauss.py  ExCM3_gaussian_AQ.py  ExCM3_wave.py  ExCM3_wave_AQ.py
Homework/: HW1_gauss.py  HW1_wave.py
Project/: README.md
Project/C/: CMakeLists.txt  a.out  functions.h  spectral.c  test_laplacian.c
Project/C/C_error/: C_error.py  etdrk4_128_1e-6_16.txt  etdrk4_128_1e-6_32.txt  etdrk4_128_1e-6_4.txt  etdrk4_128_1e-6_8.txt  imex2_128_1e-6_128.txt  imex2_128_1e-6_16.txt  imex2_128_1e-6_32.txt  imex2_128_1e-6_64.txt  imex4_128_1e-6_128.txt  imex4_128_1e-6_16.txt  imex4_128_1e-6_32.txt  imex4_128_1e-6_64.txt  rk4_128_1e-6_16.txt  rk4_128_1e-6_32.txt  sol_rk4_256.txt
Project/C/inc/: const.h  functions.h  kernel.h  plot.h  window.h
Project/C/inc/cpu/: solver.h
Project/C/inc/gpu/: solver.h
Project/C/matplotlib-cpp-master/: project.c  viscous.txt
Project/C/scripts/: benchmark.py  eigenvalues.py  kinematics.py
Project/C/src/: a.out  functions.c  kernel.cu  main.c  plot.c  spectral.c  window.c
Project/C/src/cpu/: solver.c
Project/C/src/gpu/: helper.c  solver.cu
Project/python/: c_128_ref.txt  naive.py  plot_discr_spatial.py  plot_perf.py  spectral.py  test.py  test_perf  test_perf.py
Project/python/spatial_discr_results/gaussian/: n_128_etdrk4.txt  n_160_etdrk4.txt  n_16_etdrk4.txt  n_192_etdrk4.txt  n_224_etdrk4.txt  n_256_etdrk4.txt  n_2_etdrk4.txt  n_32_etdrk4.txt  n_4_etdrk4.txt  n_64_etdrk4.txt  n_8_etdrk4.txt  n_96_etdrk4.txt
Project/python/spatial_discr_results/unit/: n_128_etdrk4.txt  n_16_etdrk4.txt  n_256_etdrk4.txt  n_2_etdrk4.txt  n_32_etdrk4.txt  n_4_etdrk4.txt  n_64_etdrk4.txt  n_8_etdrk4.txt
Project/scripts/: data_time.txt
Trefethen/: p20.py  p31.py  p6.py
python/: naive.py  vmobility.py
scripts/: c_128_init.txt  plot_perf.py  test_discr_spatial.py
